Upgrade to Achilles 1.7

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
 .classpath
-.project
 .settings
-.springBeans
+.project
 target
+bin
+.pmd
+.checkstyle
+.metadata
+*versionsBackup
+*releaseBackup
+release.properties
+*.kdb.lock
+*.orig
+*.iml
+*.log
+*.ipr
+*.iws
+.idea
+.idea
+*/.idea/*
+*~
+.cache
+.springBeans
+test-output
