--- a/pom.xml
+++ b/pom.xml
@@ -1,146 +1,142 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>info.archinnov</groupId>
-	<version>1.0-SNAPSHOT</version>
-	<name>achilles-twitter-demo</name>
-	<artifactId>achilles-twitter-demo</artifactId>
-	<packaging>war</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>info.archinnov</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <name>achilles-twitter-demo</name>
+    <artifactId>achilles-twitter-demo</artifactId>
+    <packaging>war</packaging>
 
-	<properties>
-		<java-version>1.7</java-version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<achilles.version>3.0.6-SNAPSHOT</achilles.version>
-		<spring.version>3.2.10.RELEASE</spring.version>
+    <properties>
+        <java-version>1.7</java-version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <achilles.version>3.0.11</achilles.version>
+        <spring.version>3.2.10.RELEASE</spring.version>
         <commons.lang.version>2.6</commons.lang.version>
         <pover.mock.version>1.4.9</pover.mock.version>
         <fest.assert.version>2.0M8</fest.assert.version>
         <fest.util.version>1.2.3</fest.util.version>
         <snappy.version>1.1.0-M4</snappy.version>
-	</properties>
+    </properties>
 
-	<dependencies>
-
-
-	<dependency>
-		<groupId>info.archinnov</groupId>
-		<artifactId>achilles-core</artifactId>
-		<version>${achilles.version}</version>
-		<exclusions>
-			<exclusion>
-				<artifactId>snappy-java</artifactId>
-				<groupId>org.xerial.snappy</groupId>
-			</exclusion>
-		</exclusions>
-	</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>info.archinnov</groupId>
+            <artifactId>achilles-core</artifactId>
+            <version>${achilles.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>snappy-java</artifactId>
+                    <groupId>org.xerial.snappy</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>info.archinnov</groupId>
             <artifactId>achilles-embedded</artifactId>
             <version>${achilles.version}</version>
         </dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-beans</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-core</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-context</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-web</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.springframework</groupId>
-		<artifactId>spring-webmvc</artifactId>
-		<version>${spring.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>javax.inject</groupId>
-		<artifactId>javax.inject</artifactId>
-		<version>1</version>
-	</dependency>
-	<dependency>
-		<groupId>commons-lang</groupId>
-		<artifactId>commons-lang</artifactId>
-		<version>${commons.lang.version}</version>
-	</dependency>
-	<dependency>
-		<groupId>org.powermock</groupId>
-		<artifactId>powermock-api-mockito</artifactId>
-		<version>${pover.mock.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.easytesting</groupId>
-		<artifactId>fest-assert-core</artifactId>
-		<version>${fest.assert.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.easytesting</groupId>
-		<artifactId>fest-util</artifactId>
-		<version>${fest.util.version}</version>
-		<scope>test</scope>
-	</dependency>
-	<dependency>
-		<groupId>org.xerial.snappy</groupId>
-		<artifactId>snappy-java</artifactId>
-		<version>${snappy.version}</version>
-	</dependency>
-  </dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons.lang.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${pover.mock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-assert-core</artifactId>
+            <version>${fest.assert.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.easytesting</groupId>
+            <artifactId>fest-util</artifactId>
+            <version>${fest.util.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>${snappy.version}</version>
+        </dependency>
+    </dependencies>
 
 
 
-	<build>
-		<finalName>achillesTwitter</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>${java-version}</source>
-					<target>${java-version}</target>
-				</configuration>
-			</plugin>
-   			<plugin>
+    <build>
+        <finalName>achillesTwitter</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-<!--                 <version>8.1.13.v20130916</version> -->
                 <version>8.0.4.v20111024</version>
                 <configuration>
-					<webAppConfig>
-            			<contextPath>/achillesTwitter</contextPath>
-            		</webAppConfig>	                
+                    <webAppConfig>
+                        <contextPath>/achillesTwitter</contextPath>
+                    </webAppConfig>	                
                     <scanIntervalSeconds>1</scanIntervalSeconds>
                     <stopKey>stop-jetty</stopKey>
-                    <!--<contextPath>/achillesTwitter</contextPath>-->
                     <stopPort>9999</stopPort>
                 </configuration>
             </plugin>			
-			<plugin>
-        			<groupId>org.apache.maven.plugins</groupId>
-        			<artifactId>maven-failsafe-plugin</artifactId>
-        			<version>2.7.2</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.7.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 		
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 </project>
